--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     initial-scale=1.0">
     <title>Ensayo examen</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <nav class="main-nav">
         <ul class="main-nav__container">
             <li class="main-nav__item"><a href="#">Inicio</a></li>
             <li class="main-nav__item"><a href="#">Noticias</a></li>
-            <li class="main-nav__item"><a href="#">Galeria</a></li>
+            <li class="main-nav__item"><a href="#">Galeria</a></li> 
         </ul>
     </nav>
     <section class="news">
         <div class="news__container">
             <article class="new">
                 <header class="new__header">
-                    <h2>Gran Titulo</h2>
+                    <h2>Gran</h2>
+                    <h4>Titulo</h4>
                 </header>
                 <div class="new__excerpt">
                     <p>
@@ -33,12 +35,13 @@
             </article>
             <article class="new">
                 <header class="new__header">
-                    <h2>Titulo de articulo</h2>
+                    <h3>Titulo de articulo</h3>
+                    <h5>Galeria</h5>
                 </header>
                 <div class="new__excerpt">
-                    <p>
+                    <p1>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, iure fuga nihil, provident pariatur excepturi voluptate et tenetur inventore veniam sapiente omnis nisi eius ipsum doloribus? Culpa rem doloremque iure!
-                    </p>
+                    </p1>
                 </div>
                     </a>
                 </footer>
