--- a/index.html
+++ b/index.html
@@ -2,51 +2,85 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" 
-    content="IE=edge">
-    <meta name="viewport" content="width=device-width, 
-    initial-scale=1.0">
-    <title>Ensayo examen</title>
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
+	<link rel="stylesheet" href="style.css">
+    <script> defer src="/fontawesome.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <nav class="main-nav">
-        <ul class="main-nav__container">
-            <li class="main-nav__item"><a href="#">Inicio</a></li>
-            <li class="main-nav__item"><a href="#">Noticias</a></li>
-            <li class="main-nav__item"><a href="#">Galeria</a></li> 
-        </ul>
-    </nav>
-    <section class="news">
-        <div class="news__container">
-            <article class="new">
-                <header class="new__header">
-                    <h2>Gran</h2>
-                    <h4>Titulo</h4>
-                </header>
-                <div class="new__excerpt">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, iure fuga nihil, provident pariatur excepturi voluptate et tenetur inventore veniam sapiente omnis nisi eius ipsum doloribus? Culpa rem doloremque iure!
-                    </p>
-                </div>
-                    </a>
-                </footer>
-            </article>
-            <article class="new">
-                <header class="new__header">
-                    <h3>Titulo de articulo</h3>
-                    <h5>Galeria</h5>
-                </header>
-                <div class="new__excerpt">
-                    <p1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, iure fuga nihil, provident pariatur excepturi voluptate et tenetur inventore veniam sapiente omnis nisi eius ipsum doloribus? Culpa rem doloremque iure!
-                    </p1>
-                </div>
-                    </a>
-                </footer>
-        </article>
-    </div>
-</section>
+     <nav class="main-nav"nav>
+         <ul class="nav">
+             <li class="nav__item nav__item--current">
+                 <a href="/">
+                     inicio
+                     </a>
+                <li>
+                    <li class="nav__item">
+                        <a href="#">
+                            noticias
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#">
+                            galeria
+                        </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="main">
+            <h1 class="main__title="Gran<br>Titulo</h1>
+            <div class="main__text">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil facilis sequi explicabo necessitatibus totam quod similique magnam, sunt ut ducimus, numquam voluptatum earum praesentium dignissimos itaque excepturi quis, id facere?
+			</p>
+		</div>
+	</div>
+	<article class="first-article">
+		<a class='first-article__arrow' href="#">
+			<i class="fas fa-arrow-right"></i>
+		</a>
+		<h2 class="first-article__title">Título del<br>artículo</h2>
+		<div class="first-article__text">
+			<p>
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit qui dicta, quas iure placeat maxime dolorum enim unde mollitia aperiam. Reiciendis, natus. Assumenda architecto laudantium tempore pariatur aliquam non praesentium?
+			</p>
+		</div>
+
+	</article>
+	<div class="gallery">
+		<h2 class="gallery__title">Galería</h2>
+		<div class="images">
+			<div class="image">
+				
+			</div>
+			<div class="image">
+
+			</div>
+			<div class="image">
+
+			</div>
+			<div class="image">
+
+			</div>
+			<div class="image">
+
+			</div>
+			<div class="image">
+
+			</div>
+			<div class="image">
+
+			</div>
+			<div class="image">
+
+			</div>
+
+		</div>
+
+	</div>
+	
 </body>
 </html>
