--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 	<link rel="stylesheet" href="style.css">
-    <script> defer src="/fontawesome.js"></script>
+    <script defer src="/fontawesome.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,18 +15,18 @@
          <ul class="nav">
              <li class="nav__item nav__item--current">
                  <a href="/">
-                     inicio
-                     </a>
+                          inicio
+                    </a>
                 <li>
-                    <li class="nav__item">
+                <li class="nav__item">
                         <a href="#">
-                            noticias
+                          noticias
                         </a>
-                    </li>
-                    <li class="nav__item">
+                </li>
+                <li class="nav__item">
                         <a href="#">
                             galeria
-                        </a>
+                    </a>
                 </li>
             </ul>
         </nav>
